--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,6 +11,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/bg_card"
         android:orientation="horizontal">
         <TextView
@@ -22,19 +26,25 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
             android:text="Movie Title"
+            android:maxWidth="230dp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textSize="35sp" />
         <TextView
+
             android:id="@+id/fragment_details_year"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
+            android:layout_marginRight="5dp"
+            android:gravity="end"
             android:text="YEAR"
-            android:textSize="25sp" />
+            android:textSize="20sp"
+/>
     </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="270dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
@@ -45,8 +55,8 @@
             <com.menil.rottenmovies.RemoteImageView
                 android:id="@+id/fragment_details_img"
                 android:layout_width="wrap_content"
-                android:layout_height="266dp"
-                android:layout_marginBottom="3dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="2.5dp"
                 android:layout_marginStart="1dp"
                 android:layout_marginLeft="1dp"
                 android:layout_marginTop="1dp"
@@ -70,8 +80,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="Runtime: "
-                    android:textSize="25sp"
-                    android:background="@drawable/bg_card"/>
+                    android:textSize="20sp"
+                    />
 
                 <TextView
                     android:id="@+id/fragment_details_rating"
@@ -79,16 +89,16 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="Rating: "
-                    android:textSize="25sp"
-                    android:background="@drawable/bg_card"/>
+                    android:textSize="20sp"
+                    />
                 <TextView
                     android:id="@+id/fragment_details_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="ID: "
-                    android:textSize="25sp"
-                    android:background="@drawable/bg_card"/>
+                    android:textSize="20sp"
+                    />
 
                 <TextView
                     android:text="Cast: "
@@ -97,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:textSize="15sp"
-                    android:background="@drawable/bg_card"/>
+                    />
             </LinearLayout>
         </LinearLayout>
 
