--- a/app/src/main/res/layout/full_card_2.xml
+++ b/app/src/main/res/layout/full_card_2.xml
@@ -31,6 +31,8 @@
             android:layout_height="30dp"
             android:contentDescription="@string/app_name"
             android:gravity="center"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="@string/app_name"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
