--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="3dp"
             android:layout_marginTop="1dp"
             android:scaleType="fitStart"
-            android:src="@drawable/buck" />
+            android:src="@drawable/empty_img" />
 
         <LinearLayout
             android:layout_width="wrap_content"
