--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="2dp">
+    card_view:cardCornerRadius="2dp"
+    android:longClickable="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_list_item"
