--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ListView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/boxoffice_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:clickable="true"
     android:divider="@android:color/transparent"
     android:layout_margin="5dp"
-    android:dividerHeight="0dp">
-    </ListView>
+    android:dividerHeight="0dp"/>
