--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,15 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_card"
-        android:orientation="horizontal">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
         <TextView
             android:id="@+id/fragment_details_title"
             android:layout_width="wrap_content"
@@ -30,94 +29,86 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/pale_black"
-            android:textSize="35sp" />
-        <TextView
+            android:textSize="25sp" />
 
-            android:id="@+id/fragment_details_year"
-            android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <com.menil.rottenmovies.RemoteImageView
+            android:id="@+id/fragment_details_img"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:gravity="end"
-            android:text="YEAR"
-            android:textColor="@color/pale_black"
-            android:textSize="20sp"
-/>
-    </LinearLayout>
-
+            android:layout_marginBottom="2.5dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="1dp"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:longClickable="true"
+            android:scaleType="fitXY"
+            android:contentDescription="movie image"
+            android:src="@drawable/empty_img"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/bg_card"
-            android:orientation="horizontal">
+            android:padding="5dp"
+            android:orientation="vertical">
 
-            <com.menil.rottenmovies.RemoteImageView
-                android:id="@+id/fragment_details_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2.5dp"
-                android:layout_marginStart="1dp"
-                android:layout_marginLeft="1dp"
-                android:layout_marginTop="1dp"
-                android:adjustViewBounds="true"
-                android:clickable="true"
-                android:longClickable="true"
-                android:scaleType="fitXY"
-                android:contentDescription="movie image"
-                android:src="@drawable/empty_img"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/fragment_details_runtime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:gravity="start"
+                android:text="Runtime: "
+                android:textColor="@color/pale_black"
+                android:textSize="20sp"
+                />
 
+            <TextView
+                android:id="@+id/fragment_details_rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="Rating: "
+                android:textColor="@color/pale_gray"
+                android:textSize="20sp"
+                />
 
-                <TextView
-                    android:id="@+id/fragment_details_runtime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="Runtime: "
-                    android:textColor="@color/pale_black"
-                    android:textSize="20sp"
-                    />
-
-                <TextView
-                    android:id="@+id/fragment_details_rating"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="Rating: "
-                    android:textColor="@color/pale_black"
-                    android:textSize="20sp"
-                    />
-
-                <TextView
-                    android:text="Cast: "
-                    android:id="@+id/fragment_details_cast"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textColor="@color/pale_black"
-                    android:textSize="15sp"
-                    />
-            </LinearLayout>
+            <TextView
+                android:text="Cast: "
+                android:id="@+id/fragment_details_cast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:textColor="@color/pale_gray"
+                android:textSize="15sp"
+                />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/fragment_details_synopsis"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/bg_card"
-            android:padding="3dp"
-            android:text="@string/synopsis"
-            android:textColor="@color/pale_black"
-            android:textSize="15sp" />
+    </LinearLayout>
+    </LinearLayout>
+        </android.support.v7.widget.CardView>
+<android.support.v7.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/fragment_details_synopsis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:padding="3dp"
+        android:text="@string/synopsis"
+        android:textColor="@color/pale_black"
+        android:textSize="15sp" />
+    </android.support.v7.widget.CardView>
+
 
     </LinearLayout>
 </ScrollView>
