--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -1,12 +1,18 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:minHeight="158dp"
+    android:minWidth="100dp"
+    android:layout_height="match_parent">
+<android.support.v7.widget.CardView
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     card_view:cardElevation="3dp"
     card_view:cardCornerRadius="2dp"
-    android:clickable="true"    >
+    android:layout_margin="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_list_item"
@@ -17,47 +23,93 @@
         <com.menil.rottenmovies.RemoteImageView
             android:id="@+id/fragment_list_item_img"
             android:layout_width="wrap_content"
+            android:minWidth="100dp"
             android:layout_height="wrap_content"
+            android:minHeight="158dp"
             android:layout_marginBottom="0dp"
             android:layout_marginTop="1dp"
             android:scaleType="fitXY"
             android:src="@drawable/empty_img" />
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_gravity="start"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/fragment_list_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
+            android:textColor="@color/pale_black"
+            android:textStyle="bold|italic"
+            android:text="POSITION. TITLE (YEAR)" />
 
-            <TextView
-                android:id="@+id/fragment_list_item_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/pale_black"
-                android:textStyle="bold|italic"
-                android:text="POSITION. TITLE (YEAR)" />
+        <TextView
+            android:id="@+id/fragment_list_item_runtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/pale_gray"
+            android:text="RUNTIME: " />
 
-            <TextView
-                android:id="@+id/fragment_list_item_runtime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/pale_gray"
-                android:text="RUNTIME: " />
-
-            <TextView
-                android:id="@+id/fragment_list_item_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/pale_gray"
-                android:text="RELEASE DATE: " />
-
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/fragment_list_item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/pale_gray"
+            android:text="RELEASE DATE: " />
     </LinearLayout>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_overflow"
+        android:src="@drawable/ic_action_navigation_more_vert"
         android:layout_gravity="end"
-        android:clickable="true"/>
+        android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_margin="2dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="15dp"
+        android:orientation="vertical">
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:maxHeight="40dp"
+                android:adjustViewBounds="true"
+                android:layout_height="wrap_content"
+                android:src="@drawable/rtlogo_small"/>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxHeight="40dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/imdb_small" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</RelativeLayout>
