--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,10 +3,11 @@
     android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gridview_background"
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
     android:duplicateParentState="true"
     android:textColor="@color/pale_black"
     tools:context=".NavigationDrawerFragment"/>
+    <!--    android:background="@drawable/gridview_background"-->
+    <!--android:background="?android:attr/activatedBackgroundIndicator"-->
