--- a/app/src/main/res/layout/full_card_2.xml
+++ b/app/src/main/res/layout/full_card_2.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     card_view:cardElevation="3dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/full_card_2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,17 +23,35 @@
             android:focusable="true"
             android:longClickable="true"
             android:scaleType="fitXY" />
+<RelativeLayout
+    android:id="@+id/full_card_under"
+    android:layout_below="@id/full_card_img"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/full_card_title"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:contentDescription="@string/app_name"
-            android:gravity="center"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="@string/app_name"
-            android:textColor="@color/pale_black"
-            android:textSize="18sp" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/full_card_small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#f1f1f1"/>
+    <TextView
+        android:id="@+id/full_card_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
+        android:layout_toRightOf="@id/full_card_small"
+        android:layout_toEndOf="@id/full_card_small"
+        android:layout_centerInParent="true"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="@string/app_name"
+        android:textColor="@color/pale_black"
+        android:textSize="18sp" />
+</RelativeLayout>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
