--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,6 +28,11 @@
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:gravity="center"/>
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="crash button"/>
 
     <ImageView
         android:layout_width="match_parent"
