--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -91,6 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end">
             <ImageView
+                android:id="@+id/fragment_list_item_rtn_link"
                 android:layout_width="wrap_content"
                 android:maxHeight="40dp"
                 android:adjustViewBounds="true"
@@ -105,6 +106,7 @@
             >
 
             <ImageView
+                android:id="@+id/fragment_list_item_imdb_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxHeight="40dp"
