--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -4,6 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="false"
+    android:focusable="false"
+    android:background="@android:color/transparent"
+    android:descendantFocusability="afterDescendants"
     android:minHeight="158dp"
     android:minWidth="100dp">
 
@@ -12,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:background="@drawable/transparent_selector"
         android:layout_margin="5dp"
+
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="3dp">
 
@@ -21,12 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <com.andexert.library.RippleView
-                android:id="@+id/fragment_list_item_ripple_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                ripple:rv_centered="true"
-                app:rv_color="@android:color/holo_green_dark">
+
             <com.menil.rottenmovies.RemoteImageView
                 android:id="@+id/fragment_list_item_img"
                 android:layout_width="wrap_content"
@@ -37,7 +38,7 @@
                 android:minWidth="100dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/empty_img" />
-            </com.andexert.library.RippleView>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
