--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -7,7 +7,7 @@
     android:paddingTop="?android:attr/actionBarSize">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/gridview"
+        android:id="@+id/others_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#f1f1f1"
@@ -15,7 +15,6 @@
         android:columnWidth="130dp"
         android:gravity="center"
         android:horizontalSpacing="5dp"
-        android:longClickable="true"
         android:minHeight="@dimen/activity_horizontal_margin"
         android:minWidth="@dimen/activity_vertical_margin"
         android:numColumns="auto_fit"
