--- a/app/src/main/res/layout/test_details.xml
+++ b/app/src/main/res/layout/test_details.xml
@@ -44,7 +44,8 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:adjustViewBounds="true"
-                        android:padding="5dp"
+                        android:layout_marginBottom="0.5dp"
+                        android:layout_marginTop="0.5dp"
                         android:scaleType="fitXY"
                         android:src="@drawable/empty_img" />
 
@@ -61,6 +62,7 @@
                             android:id="@+id/fragment_details_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
                             android:ellipsize="end"
                             android:singleLine="true"
                             android:text="@string/movie_title_placeholder"
@@ -152,7 +154,7 @@
                 android:layout_below="@id/fragment_details_card_title"
                 android:layout_marginBottom="-30dp"
                 android:layout_marginTop="-42dp"
-                android:src="@drawable/ic_add_white_24dp"
+                android:src="@drawable/ic_action_favorite"
                 fab:fab_colorNormal="@color/green"
                 fab:fab_colorPressed="@color/light_gray" />
 
