--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -31,7 +31,6 @@
                     android:layout_marginBottom="0.5dp"
                     android:layout_marginTop="0.5dp"
                     android:scaleType="fitXY"
-
                     android:src="@drawable/empty_img"
                     android:contentDescription="@string/details_img" />
 
@@ -42,6 +41,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_toEndOf="@id/fragment_details_img"
                     android:layout_toRightOf="@id/fragment_details_img"
                     android:ellipsize="marquee"
@@ -84,7 +85,6 @@
                         android:id="@+id/fragment_details_cast"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         android:ellipsize="marquee"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
@@ -107,40 +107,109 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_details_synopsis_title"
-                android:text="@string/synopsis_title"
-                android:paddingEnd="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="7dp"
-                android:layout_marginBottom="-15dp"
-                android:textColor="@color/pale_black"
-                android:textSize="16sp" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#399322"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="7dp"/>
+
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
-               <TextView
-                   android:id="@+id/fragment_details_synopsis"
-                   android:layout_width="wrap_content"
-                   android:layout_height="fill_parent"
-                   android:gravity="fill_horizontal"
-                   android:paddingBottom="10dp"
-                   android:paddingEnd="10dp"
-                   android:paddingLeft="10dp"
-                   android:paddingRight="10dp"
-                   android:text="@string/synopsis"
-                   android:textColor="@color/pale_black"
-                   android:textSize="15sp" />
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_synopsis_title"
+                       android:text="@string/synopsis_title"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:paddingTop="7dp"
+                       android:layout_marginBottom="-15dp"
+                       android:textColor="@color/pale_black"
+                       android:textSize="16sp" />
+                   <View
+                       android:layout_width="match_parent"
+                       android:layout_height="1dp"
+                       android:background="#399322"
+                       android:layout_marginLeft="7dp"
+                       android:layout_marginRight="7dp"
+                       android:layout_marginBottom="7dp"/>
+                   <TextView
+                       android:id="@+id/fragment_details_synopsis"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:gravity="fill_horizontal"
+                       android:paddingBottom="10dp"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:text="@string/synopsis"
+                       android:textColor="@color/pale_black"
+                       android:textSize="15sp" />
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_similar_title"
+                       android:text="Similar Movies:\n"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:paddingTop="7dp"
+                       android:layout_marginBottom="-15dp"
+                       android:textColor="@color/pale_black"
+                       android:textSize="16sp" />
+                   <View
+                       android:layout_width="match_parent"
+                       android:layout_height="1dp"
+                       android:background="#399322"
+                       android:layout_marginLeft="7dp"
+                       android:layout_marginRight="7dp"
+                       android:layout_marginBottom="7dp"/>
+                   <TextView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_similar"
+                       android:gravity="fill_horizontal"
+                       android:paddingBottom="10dp"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:text="@string/synopsis"
+                       android:textColor="@color/pale_black"
+                       android:textSize="15sp"/>
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_critics_title"
+                       android:text="Critics score:\n"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:paddingTop="7dp"
+                       android:layout_marginBottom="-15dp"
+                       android:textColor="@color/pale_black"
+                       android:textSize="16sp" />
+                   <View
+                       android:layout_width="match_parent"
+                       android:layout_height="1dp"
+                       android:background="#399322"
+                       android:layout_marginLeft="7dp"
+                       android:layout_marginRight="7dp"
+                       android:layout_marginBottom="7dp"/>
+                   <TextView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:id="@+id/fragment_details_critics"
+                       android:gravity="fill_horizontal"
+                       android:paddingBottom="10dp"
+                       android:paddingEnd="10dp"
+                       android:paddingLeft="10dp"
+                       android:paddingRight="10dp"
+                       android:text="@string/synopsis"
+                       android:textColor="@color/pale_black"
+                       android:textSize="15sp"/>
+
+                   </LinearLayout>
                </ScrollView>
             </LinearLayout>
 
