--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,13 +29,16 @@
         android:padding="10dp"
         android:layout_margin="10dp"
         android:layout_marginBottom="5dp">
-       <LinearLayout
+       <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
+
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
+               android:layout_alignParentTop="true"
+               android:id="@+id/nesto"
                android:gravity="center"
                android:text="Recently Viewed"
                android:textColor="@color/pale_gray"
@@ -43,7 +46,8 @@
            <HorizontalScrollView
                android:id="@+id/fragment_home_recent_scroll"
                android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+               android:layout_height="wrap_content"
+               android:layout_below="@+id/nesto">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
@@ -78,7 +82,15 @@
 
                </LinearLayout>
            </HorizontalScrollView>
-           </LinearLayout>
+           <ImageView
+               android:layout_marginTop="-6dp"
+               android:layout_width="match_parent"
+               android:layout_below="@id/fragment_home_recent_scroll"
+               android:layout_height="wrap_content"
+               android:id="@+id/test_img"
+               android:src="@drawable/home_shelf"/>
+
+           </RelativeLayout>
     </android.support.v7.widget.CardView>
     <View
         android:layout_width="match_parent"
